Fixed horizontal scrolling

--- a/app/static/index_second_page_style.css
+++ b/app/static/index_second_page_style.css
@@ -9,6 +9,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100%;
 }
 
 .content_box{
