--- a/app/static/index_style.css
+++ b/app/static/index_style.css
@@ -1,30 +1,30 @@
-*{
-    margin:0;
-    padding:0;
+* {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
     color: white;
     font-family: "Robot", sans-serif;
 }
 
-a{
+a {
     cursor: pointer;
 }
 
-:root{
+:root {
     --index: calc(1vh + 1vw);
-    --main-color: rgb(209,0,37);
-    --additional-color: rgb(128,0,23);
+    --main-color: rgb(209, 0, 37);
+    --additional-color: rgb(128, 0, 23);
 }
 
-body{
-    width: 100vw;
-    height: 100vh;
+body {
+    width: 100%;
+    height: 100%;
     background-color: red;
 }
 
-.layers{
+.layers {
     position: relative;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     overflow: hidden;
     background-position: center;
@@ -32,24 +32,26 @@ body{
     background-repeat: no-repeat;
 }
 
-.layer_back{
+.layer_back {
     position: absolute;
-    transform: translate3d(0, calc(var(--scrollTop) * 0.45),0);
+    transform: translate3d(0, calc(var(--scrollTop) * 0.45), 0);
     will-change: transform;
 }
-.layer_middle{
+
+.layer_middle {
     position: absolute;
-    transform: translate3d(0, calc(var(--scrollTop) * 0.4),0);
+    transform: translate3d(0, calc(var(--scrollTop) * 0.4), 0);
     will-change: transform;
 }
-.layer_front{
+
+.layer_front {
     position: absolute;
-    transform: translate3d(0, calc(var(--scrollTop) * 0.35),0);
+    transform: translate3d(0, calc(var(--scrollTop) * 0.35), 0);
     will-change: transform;
 }
 
 
-.second_page{
+.second_page {
     height: 100vh;
     width: 100vw;
     background-image: url(./images/second.jpg);
@@ -60,10 +62,9 @@ body{
 }
 
 
-
-header{
-    z-index:1;
-    position:fixed;
+header {
+    z-index: 1;
+    position: fixed;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -77,21 +78,21 @@ header{
     font-size: calc(var(--index) * 0.5);
 }
 
-.navigation{
+.navigation {
     z-index: 55;
 }
 
-.navigation a, #popup_login_btn{
+.navigation a, #popup_login_btn {
     font-size: calc(var(--index) * 0.5);
     margin-left: calc(var(--index) * 1.5);
 }
 
-.navigation a{
+.navigation a {
     text-decoration: none;
     position: relative;
 }
 
-.navigation a::after{
+.navigation a::after {
     content: "";
     position: absolute;
     background-color: var(--main-color);
@@ -105,14 +106,13 @@ header{
 }
 
 
-.navigation a:hover::after{
+.navigation a:hover::after {
     transform: scaleX(100%);
 }
 
 
-
-#popup_login_btn{
-    color:white;
+#popup_login_btn {
+    color: white;
     background-color: transparent;
     outline: none;
     border: 3px solid white;
@@ -124,14 +124,13 @@ header{
 }
 
 
-#popup_login_btn:hover{
+#popup_login_btn:hover {
     color: var(--main-color);
     background-color: white;
 }
 
 
-
-.main_header{
+.main_header {
     user-select: none;
     font-size: calc(var(--index) * 0.9);
     color: var(--main-color);
@@ -139,55 +138,53 @@ header{
 }
 
 
-.logo{
+.logo {
     display: flex;
     justify-content: center;
     align-items: center;
     position: fixed;
-    top:0;
-    left:0;
+    top: 0;
+    left: 0;
     height: 100%;
     width: 100%;
 
 }
 
-.logo img{
+.logo img {
     height: calc(var(--index) * 1.35);
     cursor: pointer;
 }
 
 
-
-.copyright_box{
+.copyright_box {
     display: flex;
     justify-content: center;
     position: absolute;
     bottom: calc(var(--index) * 0.7);
     opacity: 35%;
     width: 100%;
-    user-select:none;
+    user-select: none;
     font-size: calc(var(--index) * 0.25);
 }
 
 
-
 /* Login form */
 
-.wrapper_box{
+.wrapper_box {
     transform: scale(0);
     position: absolute;
     display: flex;
     width: 100%;
     height: 100%;
     top: 0;
-    left:0;
+    left: 0;
     justify-content: center;
     align-items: center;
     transition: transform 250ms ease-in-out;
 }
 
 
-.wrapper_inner{
+.wrapper_inner {
     transform: scale(100%);
     position: relative;
     background-color: transparent;
@@ -195,27 +192,27 @@ header{
     height: calc(var(--index) * 12);
     display: flex;
     justify-content: center;
-    border: 2px solid rgba(255,255,255,0.5);
+    border: 2px solid rgba(255, 255, 255, 0.5);
     box-shadow: 0 0 5px rgb(26, 40, 55);
     border-radius: 10px;
     backdrop-filter: blur(20px);
     transition: all 300ms ease;
     overflow: hidden;
-    z-index:2;
+    z-index: 2;
 }
 
-#close_popup_login_menu_box{
+#close_popup_login_menu_box {
     z-index: 3;
     position: absolute;
-    top:calc(var(--index) * -0.03);
-    right:calc(var(--index) * -0.03);
+    top: calc(var(--index) * -0.03);
+    right: calc(var(--index) * -0.03);
 }
 
-#close_popup_menu_btn{
+#close_popup_menu_btn {
     width: calc(var(--index) * 1);
     height: calc(var(--index) * 1);
     outline: none;
-    border:none;
+    border: none;
     background-color: var(--main-color);
     color: white;
     font-size: calc(var(--index) * 0.65);
@@ -225,13 +222,13 @@ header{
     transition: all 200ms ease-in-out;
 }
 
-#close_popup_menu_btn:hover{
+#close_popup_menu_btn:hover {
     background-color: var(--additional-color);
 }
 
 /* Form */
 
-.login_form_box{
+.login_form_box {
     width: 100%;
     padding: calc(var(--index) * 1.28);
     display: flex;
@@ -239,19 +236,19 @@ header{
     transition: transform 300ms ease;
 }
 
-.form_header{
+.form_header {
     color: var(--main-color);
     text-align: center;
     margin-bottom: calc(var(--index) * 1.28);
     font-size: calc(var(--index) * 1);
 }
 
-.input_box{
+.input_box {
     position: relative;
     margin-bottom: calc(var(--index) * 0.7);
 }
 
-.input_box input{
+.input_box input {
     height: calc(var(--index) * 0.9);
     width: 100%;
     color: var(--main-color);
@@ -263,54 +260,54 @@ header{
     border-bottom: 2px solid var(--main-color);
 }
 
-.icon{
+.icon {
     position: absolute;
     top: calc(var(--index) * 0.2);
     right: calc(var(--index) * 0.2);
 }
 
-.icon i{
+.icon i {
     color: var(--main-color);
     font-size: calc(var(--index) * 0.6);
 }
 
-.input_box label{
+.input_box label {
     color: white;
     font-size: calc(var(--index) * 0.4);
     position: absolute;
     top: calc(var(--index) * 0.32);
-    left:0;
+    left: 0;
     margin-left: calc(var(--index) * 0.2);
     pointer-events: none;
     transition: all 300ms cubic-bezier(0.370, 0.010, 0.375, 1.010);
 }
 
-.input_box input:valid ~ label, .input_box input:focus  ~ label{
+.input_box input:valid ~ label, .input_box input:focus ~ label {
     top: calc(var(--index) * -0.4);
 }
 
 
-.remember_forgot_box{
+.remember_forgot_box {
     margin-top: calc(var(--index) * -0.35);
     font-size: calc(var(--index) * 0.4);
     display: flex;
     justify-content: space-between;
 }
 
-.checkbox{
+.checkbox {
     accent-color: var(--main-color);
 }
 
-.remember_forgot_box a{
+.remember_forgot_box a {
     text-decoration: none;
 }
 
-.remember_forgot_box a:hover{
+.remember_forgot_box a:hover {
     text-decoration: underline;
     text-decoration-color: var(--main-color);
 }
 
-.submit_btn{
+.submit_btn {
     margin-top: calc(var(--index) * 0.7);
     margin-bottom: calc(var(--index) * 0.7);
     width: 100%;
@@ -326,35 +323,36 @@ header{
     transition: all 250ms ease-in-out;
 }
 
-.submit_btn:hover{
+.submit_btn:hover {
     color: var(--main-color);
     background-color: white;
 }
 
 
-.register_box{
+.register_box {
     margin-top: calc(var(--index) * -0.35);
     font-size: calc(var(--index) * 0.4);
 }
 
-.register_box p{
+.register_box p {
     text-align: center;
 }
-.register_box a{
+
+.register_box a {
     text-decoration: none;
 }
 
-.register_box a:hover{
+.register_box a:hover {
     text-decoration: underline;
     text-decoration-color: var(--main-color);
 }
 
 
-.register_form_box{
+.register_form_box {
     position: absolute;
     display: flex;
     flex-direction: column;
-    padding: calc(var(--index)* 1.28);
+    padding: calc(var(--index) * 1.28);
     width: 100%;
     transition: transform 300ms ease-in-out;
 }
